@@ -1,5 +1,10 @@
 2008-10-27  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayout-render.c (gimp_text_layout_render_trafo):
+	minor cleanup.
+
+2008-10-27  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptext-bitmap.c: cleanup, removed unused includes.
 
 2008-10-27  Sven Neumann  <sven@gimp.org>
